# codist

./: README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: codist.ast.rst  codist.distance.rst  codist.rst  codist.tree.rst
src/codist/: __init__.py  ast.py  distance.py  tree.py
tests/: requirements.txt  test_ast.py  test_distance.py  test_trees.py
