[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "codist"
version = "0.2.1"
description = "AST edit distance"

readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/James-Ansley/codist"

[tool.setuptools.packages.find]
where = ["src"]
